--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
+
+    //----Testing frameworks
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 
     compile project(':trianglify')
 }
