--- a/trianglify/build.gradle
+++ b/trianglify/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
