--- a/trianglify/build.gradle
+++ b/trianglify/build.gradle
@@ -1,5 +1,34 @@
 apply plugin: 'com.android.library'
 
+ext {
+
+    bintrayRepo = 'trianglify'
+    bintrayName = 'trianglify'   // Has to be same as your library module name
+
+    PUBLISH_GROUP_ID = 'com.sdsmdg.kd'
+    PUBLISH_ARTIFACT_ID = 'trianglify'
+    PUBLISH_VERSION = '0.7-beta'
+
+    publishedGroupId = 'com.sdsmdg.kd'
+    libraryName = 'trianglify'
+    artifact = 'trianglify'     // Has to be same as your library module name
+
+    siteUrl = 'https://github.com/sdsmdg/trianglify'
+    gitUrl = 'https://github.com/sdsmdg/trianglify.git'
+    githubRepository= 'sdsmdg/trianglify'
+
+    libraryVersion = '0.7-beta'
+    libraryDescription = 'Generate beautiful view for android.'
+
+    developerId = 'sdsmdg'
+    developerName = 'SDS, MDG'
+    developerEmail = 'sdsmdg@gmail.com'
+
+    licenseName = 'MIT License'
+    licenseUrl = 'https://github.com/sdsmdg/trianglify/blob/develop/LICENSE.md'
+    allLicenses = ["MIT"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -7,8 +36,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 0
+        versionName "0.7-beta"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -32,4 +61,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
