:arrow_up: Update version numbers to 1.0.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.sdsmdg.kd.trianglifyexample"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 0
-        versionName "0.9-beta"
+        versionCode 1
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
